--- a/drivers/media/video/samsung/ump/Makefile
+++ b/drivers/media/video/samsung/ump/Makefile
@@ -85,10 +85,6 @@ ump-$(CONFIG_UMP_VCM_ALLOC) += \
 EXTRA_CFLAGS += $(INCLUDES) \
 		$(DEFINES) 
 		
-		
-# Get subversion revision number, fall back to 0000 if no svn info is available
-SVN_REV:=$(shell ((svnversion | grep -qv exported && echo -n 'Revision: ' && svnversion) || git svn info | sed -e 's/$$$$/M/' | grep '^Revision: ' || echo ${MALI_RELEASE_NAME}) 2>/dev/null | sed -e 's/^Revision: //')
-		
-EXTRA_CFLAGS += -DSVN_REV=$(SVN_REV)
+EXTRA_CFLAGS += -DSVN_REV=0
 EXTRA_CFLAGS += -DSVN_REV_STRING=\"$(SVN_REV)\"
 		 
